--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Git 忽略
+# 【配置】Git 提交忽略上传的内容
 
 # 以 '#' 开始的行是注释
 # 在我们使用 Git 的过程中，有时候喜欢建一些文件给自给自己查看使用，或者说像是 node_modules 这些文件不希望上传到代码仓库的，这时候就需要设置响应的忽略规则，来忽略这些文件的提交。
